# osiris-chain

./: .dockerignore  .env  .gitignore  CMakeLists-back.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Dockerfile  GEMINI.md  README.md  Taskfile.yml  architecture.md  build.sh  build_out.txt  cli-wallet.md  cml.txt  deployment.md  docker-compose.yml  modules.md  osiris-core  osiris-node  progress.txt  run_debug.sh  run_tests.sh  runai.js  summary.md  tests.sh  tree.md  tree.txt
.devcontainer/: devcontainer.json
cmake/: check_yaml.py
config/: README.md  dev.yaml  mainnet.yaml  node1.yaml  node2.yaml  node3.yaml  testnet.yaml
contracts/: README.md  SocialContract.seth  vote.kontrakt
docs/: config-guide.md  consensus.md  cryptography.md  osiris_core_design.md  roadmap.md  test-strategy.md
include/osiris/: Types.hpp
monitoring/: README.md  prometheus.yml
monitoring/grafana/: grafana.db
nft/single-audio-dev1000x/: .gitignore  README.md  index-prototype.html
tests/: CMakeLists.txt  CTestTestfile.cmake  ChainTest.cpp  Makefile  WalletTest.cpp  chain_tests.cpp  cmake_install.cmake  config_tests.cpp  cons.txt  consensus_scenarios.test  consensus_tests.cpp  contract_tests.cpp  dummy_node_factory.cpp  dummy_node_factory.hpp  metrics_tests.cpp  network_tests.cpp  osiris-tests  osiris-tests[1]_include.cmake  osiris-tests[1]_tests.cmake  status_test.cpp  storage_tests.cpp  tree.md
